2012-12-14  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r137767.
        http://trac.webkit.org/changeset/137767
        https://bugs.webkit.org/show_bug.cgi?id=105062

        Broke Mac builds. (Requested by mlam on #webkit).

        * CMakeLists.txt:
        * GNUmakefile.list.am:
        * Modules/webdatabase/AbstractDatabaseServer.h: Removed.
        * Modules/webdatabase/DBBackendServer.h: Removed.
        * Modules/webdatabase/DatabaseManager.cpp:
        (WebCore::DatabaseManager::DatabaseManager):
        * Modules/webdatabase/DatabaseManager.h:
        * Target.pri:
        * WebCore.exp.in:
        * WebCore.gypi:
        * WebCore.vcproj/WebCore.vcproj:
        * WebCore.xcodeproj/project.pbxproj:
        * platform/DatabaseStrategy.cpp: Removed.
        * platform/DatabaseStrategy.h: Removed.
        * platform/PlatformStrategies.h:
        (WebCore):
        (WebCore::PlatformStrategies::PlatformStrategies):
        (PlatformStrategies):

2012-12-14  Jer Noble  <jer.noble@apple.com>

        Allow the text track contents to be displayed externally to WebCore.
        https://bugs.webkit.org/show_bug.cgi?id=105052

        Reviewed by Eric Carlson.

        Support scenarios where the text track contents must be rendered outside of WebCore, such as to an external
        display or window.  Add an abstract base class which encapsulates the external representation to which the
        text tracks will be rendered.

        Add a new abstract base class and client to wrap the external rendering of a TextTrack.
        * platform/graphics/TextTrackRepresentation.h: Added.
        (WebCore::TextTrackRepresentationClient::~TextTrackRepresentationClient):
        (WebCore::TextTrackRepresentation::~TextTrackRepresentation):

        Add an empty concrete implementation for those ports who do not yet support external display of subtitles.
        * platform/graphics/TextTrackRepresentation.cpp: Added.